force-app/main/default/objects/Account/fields/Acroynm__c.field-meta.xml
<CustomField>
    <fullName>Acroynm__c</fullName>
    <label>Acroynm</label>
    <length>10</length>
    <type>Text</type>
</CustomField>