force-app/main/default/objects/Account/fields/Agency_Number__c.field-meta.xml
<CustomField>
    <fullName>Agency_Number__c</fullName>
    <label>Agency Number</label>
    <length>24</length>
    <type>Text</type>
</CustomField>