force-app/main/default/objects/Account/fields/Agency_Status__c.field-meta.xml
<CustomField>
    <fullName>Agency_Status__c</fullName>
    <label>Agency Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Type 1</fullName>
            </value>
            <value>
                <fullName>Type 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>