force-app/main/default/objects/Account/fields/Alternate_DBA_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Alternate_DBA_Legal_Name__c</fullName>
    <label>Alternate DBA/Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>