force-app/main/default/objects/Account/fields/County_Lookup__c.field-meta.xml
<CustomField>
    <fullName>County_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>County</label>
    <referenceTo>County__c</referenceTo>
    <relationshipLabel>Agencies</relationshipLabel>
    <relationshipName>Agencies</relationshipName>
    <type>Lookup</type>
</CustomField>