force-app/main/default/objects/Account/fields/LA_County_Agency__c.field-meta.xml
<CustomField>
    <fullName>LA_County_Agency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identify LA County agencies for Relocation reports and dashboards</description>
    <label>LA County Agency</label>
    <type>Checkbox</type>
</CustomField>