force-app/main/default/objects/Account/fields/Largest_Number_of_Inspections_2019__c.field-meta.xml
<CustomField>
    <fullName>Largest_Number_of_Inspections_2019__c</fullName>
    <label>Largest Number of Inspections (2019)</label>
    <summarizedField>Puppy_Mill_Inspection__c.Inspection_Count__c</summarizedField>
    <summaryFilterItems>
        <field>Puppy_Mill_Inspection__c.Inspection_Year__c</field>
        <operation>equals</operation>
        <value>2019</value>
    </summaryFilterItems>
    <summaryForeignKey>Puppy_Mill_Inspection__c.Puppy_Mill_Agency__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>