force-app/main/default/objects/Account/fields/Other_County__c.field-meta.xml
<CustomField>
    <fullName>Other_County__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other County</label>
    <referenceTo>County__c</referenceTo>
    <relationshipLabel>Agencies (Other County)</relationshipLabel>
    <relationshipName>Agencies2</relationshipName>
    <type>Lookup</type>
</CustomField>