force-app/main/default/objects/Account/fields/Other_Social_Media_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Other_Social_Media_Accounts__c</fullName>
    <label>Other Social Media Accounts</label>
    <type>TextArea</type>
</CustomField>