force-app/main/default/objects/Account/fields/Possible_Conflicts__c.field-meta.xml
<CustomField>
    <fullName>Possible_Conflicts__c</fullName>
    <label>Possible Conflicts</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>