force-app/main/default/objects/Account/fields/Possible_Pro_Bono__c.field-meta.xml
<CustomField>
    <fullName>Possible_Pro_Bono__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possible Pro-Bono</label>
    <type>Checkbox</type>
</CustomField>