force-app/main/default/objects/Account/fields/X2019_Inspections__c.field-meta.xml
<CustomField>
    <fullName>X2019_Inspections__c</fullName>
    <label>2019 Inspections</label>
    <summaryFilterItems>
        <field>Puppy_Mill_Inspection__c.Inspection_Year__c</field>
        <operation>equals</operation>
        <value>2019</value>
    </summaryFilterItems>
    <summaryForeignKey>Puppy_Mill_Inspection__c.Puppy_Mill_Agency__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>