force-app/main/default/objects/Account/fields/X501C3_Status__c.field-meta.xml
<CustomField>
    <fullName>X501C3_Status__c</fullName>
    <label>501C3 Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>