force-app/main/default/objects/Account/recordTypes/FIR_accounts.recordType-meta.xml
<RecordType>
    <fullName>FIR_accounts</fullName>
    <active>true</active>
    <label>LAI/NFR Agency</label>
</RecordType>