force-app/main/default/objects/Account/recordTypes/Legal_Advocacy_Agency.recordType-meta.xml
<RecordType>
    <fullName>Legal_Advocacy_Agency</fullName>
    <active>false</active>
    <label>Legal Advocacy Agency</label>
</RecordType>