force-app/main/default/objects/Account/recordTypes/Puppy_Mill_Agency.recordType-meta.xml
<RecordType>
    <fullName>Puppy_Mill_Agency</fullName>
    <active>true</active>
    <label>Puppy Mill Agency</label>
</RecordType>