force-app/main/default/objects/Account/validationRules/City_and_State_required.validationRule-meta.xml
<ValidationRule>
    <fullName>City_and_State_required</fullName>
    <active>false</active>
    <errorConditionFormula>OR( BillingCity =&apos;&apos;, BillingState =&apos;&apos;)</errorConditionFormula>
    <errorDisplayField>BillingCity</errorDisplayField>
    <errorMessage>You must provide a City and State.</errorMessage>
</ValidationRule>