force-app/main/default/objects/Account/listViews/Puppy_Mill_Agencies.listView-meta.xml
<ListView>
    <fullName>Puppy_Mill_Agencies</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>DBA_Name__c</columns>
    <columns>Alternate_DBA_Legal_Name__c</columns>
    <columns>Customer_Number__c</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Puppy_Mill_Agency</value>
    </filters>
    <label>Puppy Mill Agencies</label>
    <sharedTo>
        <group>Legal_Advocacy</group>
    </sharedTo>
</ListView>